# rdi-reader

./: .gitignore  .gitmodules  CMakeLists.txt  CONVERT_VISUALSONICS_2_MAT.kdevelop.pcs  Doxyfile  README.rst
.pida-metadata/: project.json
common/: ReadImageBase.cpp  ReadImageBase.h  ReadMetadataBase.cpp  ReadMetadataBase.h
common/spirit_parse/: rdiParser.cpp
cxx/: CMakeLists.txt  ExtractImage.cpp  ExtractImage.h  ReadImage.cpp  ReadImage.h  convert_visualsonics.cpp  convert_visualsonics_test.cpp  parse_vs_rdi.cpp  parse_vs_rdi.h
doc/: Doxyfile
matlab/: .vs2m_gateway.cpp.swp  CMakeLists.txt  vs2m_gateway.cpp  vs2m_gateway_Input.cpp  vs2m_gateway_Input.h  vs2m_gateway_helper_functions.cpp  vs2m_gateway_helper_functions.h
readvs/: sized_ints.h
source/: CMakeLists.txt
source/common/: CMakeLists.txt  ImageReader.cpp  ImageReader.h  ImageReaderBase.cpp  ImageReaderBase.h  MetadataReaderBase.cpp  MetadataReaderBase.h  ReadImageBase.h  ReadMetadataBase.cpp  ReadMetadataBase.h  ReadMethod.h  ToXMLCh.cpp  ToXMLCh.h  VisualSonicsTransform.cpp  VisualSonicsTransform.h  XStr.h  rdi2xml.cpp  rdiReader.cpp  rdiReader.h  sized_ints.h
source/common/formats/: CMakeLists.txt  README.1  element_types.py  fe.py  format-evaluator.py  format_evaluator.py  hello.xml  rdi.cxx  rdi.hxx  rdi.xsd
source/common/formats/format_evaluator/: element_types.py  format_evaluator.py  namespace_vars.py  rdi_line_parser.py  unexpected_content_exception.py
source/common/formats/model_rdi/710B/: 1090-400_seg1.rdi  RF-25MHz-100P-1cycle-M11dB.rdi  frame1seg1.rdi
source/common/interpolation/: Bilinear.cpp  Bilinear.h  Interpolation.cpp  Interpolation.h  InterpolationMethod.h  NearestNeighbor.cpp  NearestNeighbor.h
source/common/spirit_parse/: BoostSpiritInputFile.cpp  BoostSpiritInputFile.h  rdiParser.cpp  rdiParser.h  rdiParserData.h
source/cxx/: CMakeLists.txt  ImageReader.cpp  ImageReader.h  ReadImage.cpp  ReadImage.h  parse_vs_rdi.cpp  parse_vs_rdi.h
source/itk/: CMakeLists.txt  ibsc.cxx  itkBSC.h  itkBSC.txx  itkFFTW1DComplexConjugateToRealImageFilter.h  itkFFTW1DComplexConjugateToRealImageFilter.txx  itkFFTW1DRealToComplexConjugateImageFilter.h  itkFFTW1DRealToComplexConjugateImageFilter.txx  itkFrequencyVectorImageFilter.h  itkFrequencyVectorImageFilter.txx  itkHammingWindowImageFilter.h  itkHammingWindowImageFilter.txx  itkMeanAcrossDirection.h  itkMeanAcrossDirection.txx  itkVisualSonicsImageIO.cxx  itkVisualSonicsImageIO.h  itkVisualSonicsImageIOFactory.cxx  itkVisualSonicsImageIOFactory.h  itkVisualSonicsSeriesReader.h  itkVisualSonicsSeriesReader.txx  phantomSpectrum.cxx  start.cpp  vs-convert.cxx
source/matlab/: CMakeLists.txt  vs2m_gateway.cpp  vs2m_gateway_Input.cpp  vs2m_gateway_Input.h  vs2m_gateway_Output.cpp  vs2m_gateway_Output.h  vs2m_gateway_OutputFile.cpp  vs2m_gateway_OutputFile.h  vs2m_gateway_helper_functions.cpp  vs2m_gateway_helper_functions.h
source/modules/: CMakeLists.txt  FindRDIReader.cmake  FindTBB.cmake  FindXalanC.cmake  FindXercesC.cmake  FindXsd.cmake
source/vtk/: CMakeLists.txt  ImageReader.cpp  ImageReader.h  ImageViewer.cpp  ImageViewer.h  ReadImage.h  ViewImage.cpp  ViewImage.h  cxxImageReaderNonTemplated.h  vs-convert.cpp  vs-vtk-convert.cpp  vs-vtk-viewer.cpp  vtkUnsafeStructuredGridToImage.cpp  vtkUnsafeStructuredGridToImage.h  vtkVisualSonicsReader.cpp  vtkVisualSonicsReader.h
source/xml/: CMakeLists.txt  file2cstringliteral.py  rdi2html.cpp  rdi2html.h  rdi2html.xsl  rdi2html_main.cpp  rdi2xml.cpp
spirit_parse/: .rdiParser.h.swp  .rdiParserData.h.swp  BoostSpiritInputFile.cpp  BoostSpiritInputFile.h  ExtractImageBase.h  ExtractMetadataBase.cpp  ExtractMetadataBase.h  InputBase.cpp  InputBase.h  OutputBase.h  rdiParser.cpp  rdiParser.cpp_backup  rdiParser.cpp_function_attempt  rdiParser.h  rdiParser.h_function_attempt  rdiParserData.cpp  rdiParserData.h
tests/: CMakeLists.txt  cxx_test.cpp  python_unittests.py  vtk_test.cpp
tests/common/: CMakeLists.txt  rdiReaderTest.cpp
tests/common/formats/: test_format_evaluator.py
tests/data/: input
tests/data/input/: us_uniform_phantom_w_surface.nrrd  us_uniform_phantom_w_surface.rdi
tests/itk/: CMakeLists.txt  b-mode-instan.cxx  reader-instan.cxx  visualsonics-series-reader-instan.cxx  vs-convert-b-mode-series.cxx  vs-convert-b-mode.cxx  writer-instan.cxx
tests/xml/: CMakeLists.txt  xalan_comparison
vtk/: ReadImage.cpp  ReadImage.h  ViewImage.cpp
